# nuxt-fastapi-poc

./: .env.example  README.md  nuxt.config.ts  package.json  tsconfig.json
backend/: Dockerfile  README.md  main.py  pyproject.toml  tox.ini
backend/scripts/: server.py
src/api/: api.ts  configuration.ts  index.ts
src/pages/: inspire.vue
src/plugins/: api.ts  axios.d.ts  index.ts
