[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for nuxt-fastapi-poc"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT"
packages = [
    { include="scripts", from="." }
]

[tool.poetry.scripts]
serve = "scripts.server:run"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.18.1"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
